--- a/loveitcode.ipynb
+++ b/loveitcode.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# notebook full of useful useful codes for data science and analysis"
+    "# notebook full of useful codes and libraries for data science and analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask\n",
+    "import dask.dataframe as dd"
    ]
   },
   {
