--- a/loveitcode.ipynb
+++ b/loveitcode.ipynb
@@ -25,6 +25,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# setting pandas df limits\n",
+    "pd.set_option('display.max_rows', 100)\n",
+    "pd.set_option('display.max_columns', 1000)\n",
+    "pd.set_option('display.width', 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a MSSQL Connection, import from SQL to pandas dataframe\n",
+    "import pyodbc\n",
+    "import pandas as pd\n",
+    "\n",
+    "config = dict(server=   'SERVER',\n",
+    "              port=      PORT,\n",
+    "              database= 'DATABASE',\n",
+    "              username= 'USERNAME',\n",
+    "              password= 'PASSWORD')\n",
+    "\n",
+    "cxn_str = ('SERVER={server},{port};' + 'DATABASE={database};' +\n",
+    "           'UID={username};' + 'PWD={password}')\n",
+    "\n",
+    "cxn = pyodbc.connect(r'DRIVER={SQL Server Native Client 11.0};' + cxn_str.format(**config))\n",
+    "\n",
+    "df = pd.read_sql(\"SELECT * FROM TABLE;\", cxn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def reduce_mem_usage(df):\n",
     "    \"\"\" \n",
     "    iterate through all the columns of a dataframe and \n",
