--- a/loveitcode.ipynb
+++ b/loveitcode.ipynb
@@ -117,6 +117,169 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To read data file incrementally using pandas, you have to use a parameter chunksize which specifies number of rows to read/write at a time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "incremental_dataframe = pd.read_csv(\n",
+    "    \"train.csv\", chunksize=100000)  # Number of lines to read.\n",
+    "# This method will return a sequential file reader (TextFileReader)\n",
+    "# reading 'chunksize' lines every time. To read file from\n",
+    "# starting again, you will have to call this method again."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then you can train on your data incrementally using XGBoost¹ or LightGBM. For LightGBM you have to pass in a argument keep_training_booster=True to its .train method and three arguments to XGBoost's .train method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First one necessary for incremental learning:\n",
+    "lgb_params = {\n",
+    "    'keep_training_booster': True,\n",
+    "    'objective': 'regression',\n",
+    "    'verbosity': 100,\n",
+    "}\n",
+    "# First three are for incremental learning:\n",
+    "xgb_params = {\n",
+    "    'update': 'refresh',\n",
+    "    'process_type': 'update',\n",
+    "    'refresh_leaf': True,\n",
+    "    'silent': False,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On each step we will save our estimator and then pass it as an argument during next step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For saving regressor for next use.\n",
+    "lgb_estimator = None\n",
+    "xgb_estimator = None\n",
+    "\n",
+    "for df in incremental_dataframe:\n",
+    "    df = preprocess(df)\n",
+    "  \n",
+    "    xtrain, ytrain, xvalid, yvalid = # Split data as you like\n",
+    "  \n",
+    "    lgb_estimator = lgb.train(lgb_params,\n",
+    "                         # Pass partially trained model:\n",
+    "                         init_model=lgb_estimator,\n",
+    "                         train_set=lgb.Dataset(xtrain, ytrain),\n",
+    "                         valid_sets=lgb.Dataset(xvalid, yvalid),\n",
+    "                         num_boost_round=10)\n",
+    "\n",
+    "    xgb_model = xgb.train(xgb_params, \n",
+    "                        dtrain=xgb.DMatrix(xtrain, ytrain),\n",
+    "                        evals=(xgb.DMatrix(xvalid, yvalid),\"Valid\"),\n",
+    "                        # Pass partially trained model:\n",
+    "                        xgb_model = xgb_estimator)\n",
+    "\n",
+    "    del df, xtrain, ytrain, xvalid, yvalid\n",
+    "    gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CatBoost's incremental learning method is in progress.²\n",
+    "To speed things up a bit more and if your chunks a still sufficiently big, you can parallelize your preprocessing method using Python's multiprocessing library functions like this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_jobs = 4\n",
+    "for df in incremental_dataframe:\n",
+    "    p = Pool(n_jobs)\n",
+    "    f_ = p.map(preprocess, np.array_split(df, n_jobs))\n",
+    "    f_ = pd.concat(f_, axis=0, ignore_index=True)\n",
+    "    p.close()\n",
+    "    p.join()\n",
+    "\n",
+    "    # And then your model training ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For an introduction on Parallel programming in Python read my post here.\n",
+    "\n",
+    "https://towardsdatascience.com/speed-up-your-algorithms-part-1-pytorch-56d8a4ae7051"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
