--- a/loveitcode.ipynb
+++ b/loveitcode.ipynb
@@ -37,6 +37,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# json to dataframe\n",
+    "\n",
+    "with open('Assessor-Search-Results.json', 'r', encoding=\"utf-8\") as json_file:\n",
+    "    json_work = json.load(json_file)\n",
+    "\n",
+    "df = pd.json_normalize(json_work)\n",
+    "\n",
+    "df = pd.DataFrame([y for x in df['results'].values.tolist() for y in x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create a MSSQL Connection, import from SQL to pandas dataframe\n",
     "import pyodbc\n",
     "import pandas as pd\n",
