--- a/training/ml-scikit-learn-intro.ipynb
+++ b/training/ml-scikit-learn-intro.ipynb
@@ -4,17 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning with Scikit-Learn:<br>Introduction to Machine Learning\n",
-    "## Jake VanderPlas"
+    "# Machine Learning with Scikit-Learn:<br>Introduction to Machine Learning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2021-04-14T14:49:11.276835Z",
+     "start_time": "2021-04-14T14:49:11.271895Z"
+    }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, World!\n"
+     ]
+    }
+   ],
    "source": [
     "# The code in these cells is runable. \n",
     "# Click on this cell, then press Shift+Enter to run it, \n",
@@ -83,9 +93,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2021-04-14T14:49:43.401373Z",
+     "start_time": "2021-04-14T14:49:43.148320Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -99,7 +112,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "ExecuteTime": {
+     "end_time": "2021-04-14T14:49:50.054421Z",
+     "start_time": "2021-04-14T14:49:49.867423Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -1131,7 +1147,36 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.8"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
