--- a/training/ml-scikit-learn-support-vector-machines.ipynb
+++ b/training/ml-scikit-learn-support-vector-machines.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning with Scikit-Learn: Support Vector Machines\n",
-    "## Jake VanderPlas"
+    "# Machine Learning with Scikit-Learn: Support Vector Machines\n"
    ]
   },
   {
